--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="primary">#25b7d3</color>
-  <color name="primary_dark">#027A91</color>
-  <color name="primary_darker">#027A91</color>
+  <color name="primary">#16a29a</color>
+  <color name="primary_dark">#008A80</color>
+  <color name="primary_darker">#006C64</color>
   <color name="accent">#FFFFFF</color>
 
   <color name="black">#000000</color>
